2012-02-14  Felix Ingrand  <felix@cturtle>

	* oprs-parser.y.part: Added commands to the parser to load actions, evaluable functions and predicates. ex:
		load action "user-action-example"
		load evaluable function "user-ev-function-example"
		load evaluable predicate "user-ev-predicate-example"

	* user-ev-function.c user-action.c user-ev-predicate.c: Example of dynamic loading of actions, functions and predicates.

	* ev-function.c: Added ltdl code to load actions, evaluable functions and predicates.

2011-07-13  Francois Felix Ingrand  <felix@ingrand.net>

	* mp.c (add_buffered_message): Fixed again a 32/64 bits problem when using the message passer.

2011-05-27  Francois Felix Ingrand  <felix@ingrand.net>

	* configure.ac: Bump the patch level to 1.0b14.

	* op-structure.c (print_op): Probably fix a crash GMV had while loading op file with trace load opf on.

2011-02-25  Felix Ingrand  <felix@cturtle>

	* configure.ac: Pushed version to 1.0b12.

	* Makefile.in: improve the dist-robotpkg target

	* tcl.c (start_tcl_interpreter): First cut at sending commands to
	a tcl interpreter. Fork a tclsh, and send it commands over a
	socketpair. Added an action for this, and added an OP in
	new-default.opf which can call this action.

2011-02-22  Francois Felix Ingrand  <felix@cturtle>
	* Push to 1.0b11 to fix my mess... 

	* configure.ac: Push the release to 1.0b10 to fix the 32/64 bits
	problem with the message passer.

	* Minor esthetic changes...

	* oprs-cat.c (get_bytes): Fixed an annoying message when the xoprs
	quit properly.

2011-02-22  Francois Ingrand  <felix@pr2c1>

	* send-message.c: Another 32/64 bits problem... with the message
	passer on 64 bits machines. I now use uint32_t everywhere...

2011-02-20  Francois Felix Ingrand  <felix@ingrand.net>

	* parser-funct.c (replace_env_string):
	* oprs-parser.y : One can now specify environment
	variables (e.g. ${HOME}, ${ROBOTPKG_BASE}) in the "set
	oprs_data_path" command.
