@@ -1,0 +1,2 @@
+
+void load_function_from_dl(char *filename, char *entry_point_name);
