@@ -50,15 +50,17 @@ static const char* const rcsid = "$Id$";
 
 #include "oprs-type_f-pub.h"
 #include "ev-function_f-pub.h"
+
 #include "action_f-pub.h"
 #include "lisp-list_f-pub.h"
 #include "oprs_f-pub.h"
 
-#include "oprs-rerror_f-pub.h"
 #include "oprs-error.h"
+#include "oprs-error_f.h"
+
 #include "oprs-rerror.h"
 #include "oprs-rerror_f.h"
-#include "oprs-error_f.h"
+#include "oprs-rerror_f-pub.h"
 
 
 Term *action_post_fact(TermList terms)
@@ -133,16 +135,16 @@ Term *action_bar_foo(TermList terms)
      return res;
 }
 
-//#define declare_user_action user_action_LTX_declare_user_action
+#define declare_user_action user_action_LTX_declare_user_action
 
 void declare_user_action(void)
 {
-  fprintf(stderr,"declare_user_action.\n");
-  make_and_declare_eval_funct("FOO-BAR",action_bar_foo, 2);
-  make_and_declare_action("FOO-BAR",action_bar_foo, 2);
+     fprintf(stderr,"declare_user_action.\n");
+     make_and_declare_eval_funct("FOO-BAR",action_bar_foo, 2);
+     make_and_declare_action("FOO-BAR",action_bar_foo, 2);
 #ifdef IGNORE
      make_and_declare_action("POST-FACT",action_post_fact, 1);
      make_and_declare_action("POST-FACT-DIRECT",action_post_direct_fact, 0);
 #endif
-      return; 
+     return; 
 }
